<?xml version="1.0"?>
<package format="2">
  <name>ros_dvs_emulator</name>
  <version>0.0.0</version>
  <description>The ros_dvs_emulator package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/ros_dvs_emulator_nodelet.xml"/>
  </export>

</package>
