<?xml version="1.0"?>
<package>
  <name>ros_dvs_logger</name>
  <version>0.0.0</version>
  <description>The ros_dvs_logger package</description>
  <maintainer email="ritt@mytum.de">Konstantin Ritt</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ros_dvs_msgs</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>ros_dvs_msgs</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/dvs_logger_nodelet.xml"/>
  </export>
</package>
