<?xml version="1.0"?>
<package>
  <name>ros_dvs_service</name>
  <version>0.0.0</version>
  <description>The ros_dvs_service package</description>
  <maintainer email="ritt@mytum.de">Konstantin Ritt</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
